--- a/package.json
+++ b/package.json
@@ -5,17 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch -r module-alias/register index.js",
+    "dev": "node --watch index.js",
     "local": "node local.js",
-    "mainSeed": "node -r module-alias/register ./src/utils/seeds/mainSeed.js"
-  },
-  "_moduleAliases": {
-    "@root": ".",
-    "@api": "src/api",
-    "@config": "src/config",
-    "@data": "src/data",
-    "@middlewares": "src/middlewares",
-    "@utils": "src/utils"
+    "mainSeed": "node ./src/utils/seeds/mainSeed.js"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +23,6 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "module-alias": "^2.2.3",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0"
